week 02 - Team Activity: Temples
