# backend/routes/temple.js
@@ -23,4 +23,9 @@ routes.get('/:temple_id', temples.findOne);
 
 routes.post('/', temples.create);
 
+routes.put('/:temple_id', temples.update);
+routes.delete('/:temple_id', temples.delete);
+routes.delete('/', temples.deleteAll);
+routes.get('/', temples.findAllPublished);
+
 module.exports = routes;
